--- a/composer.json
+++ b/composer.json
@@ -113,6 +113,11 @@
         "symfony/symfony": "*"
     },
     "extra": {
+        "symfony-assets-install": "relative",
+        "incenteev-parameters": {
+            "file": "app/config/parameters.yml",
+	    "keep-outdated": true
+        },
         "symfony": {
             "allow-contrib": false,
             "require": "4.3.*"
