--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "rapsys/airbundle": "dev-master",
         "rapsys/packbundle": "dev-master",
         "rapsys/userbundle": "dev-master",
-        "rapsys/airbundle": "dev-master",
+        "symfony/config": "4.3.*",
         "symfony/console": "4.3.*",
+        "symfony/dependency-injection": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
