--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,22 @@
 {
     "type": "project",
     "name": "rapsys/airlibre",
-    "description": "Open air booking system",
+    "description": "Outdoor area booking system",
     "license": "AGPL-3.0-or-later",
     "require": {
-        "php": "^7.1.3",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
-        "rapsys/airbundle": "dev-master",
-        "rapsys/packbundle": "dev-master",
-        "rapsys/userbundle": "dev-master",
-        "symfony/config": "4.3.*",
-        "symfony/console": "4.3.*",
-        "symfony/dependency-injection": "4.3.*",
-        "symfony/dotenv": "4.3.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "4.3.*",
-        "symfony/process": "4.3.*",
-        "symfony/security": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/asset": "^4.3",
+        "symfony/config": "^4.3",
+        "symfony/console": "^4.3",
+        "symfony/dependency-injection": "^4.3",
+        "symfony/flex": "^1.4",
+        "symfony/framework-bundle": "^4.3",
+        "symfony/yaml": "^4.3",
+        "twig/extensions": "^1.5",
+        "rapsys/packbundle": "dev-master"
     },
     "require-dev": {
     },
     "config": {
-        "preferred-install": {
-            "*": "dist"
-        },
         "sort-packages": true
     },
     "autoload": {
@@ -38,91 +29,73 @@
             "App\\Tests\\": "tests/"
         }
     },
-    "replace": {
-        "paragonie/random_compat": "2.*",
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
-    },
     "repositories": [
-	    {
-		    "type": "package",
-		    "package": {
-			    "name": "rapsys/userbundle",
-			    "version": "dev-master",
-			    "source": {
-				    "type": "git",
-				    "url": "https://rapsys@git.rapsys.eu/userbundle",
-				    "reference": "master"
-			    },
-			    "autoload": {
-				    "psr-4": {
-					    "Rapsys\\UserBundle\\": ""
-				    }
-			    }
-		    }
-	    },
-	    {
-		    "type": "package",
-		    "package": {
-			    "name": "rapsys/packbundle",
-			    "version": "dev-master",
-			    "source": {
-				    "type": "git",
-				    "url": "https://rapsys@git.rapsys.eu/packbundle",
-				    "reference": "master"
-			    },
-			    "autoload": {
-				    "psr-4": {
-					    "Rapsys\\PackBundle\\": ""
-				    }
-			    }
-		    }
-	    },
-	    {
-		    "type": "package",
-		    "package": {
-			    "name": "rapsys/airbundle",
-			    "version": "dev-master",
-			    "source": {
-				    "type": "git",
-				    "url": "https://rapsys@git.rapsys.eu/airbundle",
-				    "reference": "master"
-			    },
-			    "autoload": {
-				    "psr-4": {
-					    "Rapsys\\AirBundle\\": ""
-				    }
-			    }
-		    }
-	    }
-    ],
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+        {
+            "type": "package",
+            "package": {
+                "name": "rapsys/userbundle",
+                "version": "dev-master",
+                "source": {
+                    "type": "git",
+                    "url": "https://rapsys@git.rapsys.eu/userbundle",
+                    "reference": "master"
+                },
+                "autoload": {
+                    "psr-4": {
+                        "Rapsys\\UserBundle\\": ""
+                    }
+                }
+            }
         },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
-    },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
+        {
+            "type": "package",
+            "package": {
+                "name": "rapsys/packbundle",
+                "version": "dev-master",
+                "source": {
+                    "type": "git",
+                    "url": "https://rapsys@git.rapsys.eu/packbundle",
+                    "reference": "master"
+                },
+                "autoload": {
+                    "psr-4": {
+                        "Rapsys\\PackBundle\\": ""
+                    }
+                },
+                "require": {
+                    "symfony/config": "^4.3",
+                    "symfony/dependency-injection": "^4.3",
+                    "symfony/asset": "^4.3",
+                    "twig/extensions": "^1.5"
+                }
+            }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "rapsys/airbundle",
+                "version": "dev-master",
+                "source": {
+                    "type": "git",
+                    "url": "https://rapsys@git.rapsys.eu/airbundle",
+                    "reference": "master"
+                },
+                "autoload": {
+                    "psr-4": {
+                        "Rapsys\\AirBundle\\": ""
+                    }
+                }
+            }
+        }
+    ],
     "extra": {
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
-            "file": "app/config/parameters.yml",
-	    "keep-outdated": true
+            "keep-outdated": true
         },
         "symfony": {
-            "allow-contrib": false,
-            "require": "4.3.*"
+            "allow-contrib": true,
+            "endpoint": "https://flex.rapsys.eu"
         }
     }
 }
