--- a/composer.json
+++ b/composer.json
@@ -4,19 +4,25 @@
     "description": "Outdoor area booking system",
     "license": "AGPL-3.0-or-later",
     "require": {
-        "symfony/asset": "^4.3",
-        "symfony/config": "^4.3",
-        "symfony/console": "^4.3",
-        "symfony/dependency-injection": "^4.3",
-        "symfony/flex": "^1.4",
-        "symfony/framework-bundle": "^4.3",
-        "symfony/yaml": "^4.3",
-        "twig/extensions": "^1.5",
+        "php": "^7.1.3",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "symfony/asset": "4.3.*",
+        "symfony/console": "4.3.*",
+        "symfony/dependency-injection": "4.3.*",
+        "symfony/dotenv": "4.3.*",
+        "symfony/flex": "^1.3.1",
+        "symfony/framework-bundle": "4.3.*",
+        "symfony/yaml": "4.3.*",
+        "twig/extensions": "1.5.*",
         "rapsys/packbundle": "dev-master"
     },
     "require-dev": {
     },
     "config": {
+        "preferred-install": {
+            "*": "dist"
+        },
         "sort-packages": true
     },
     "autoload": {
@@ -88,6 +94,29 @@
             }
         }
     ],
+    "replace": {
+        "paragonie/random_compat": "2.*",
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php71": "*",
+        "symfony/polyfill-php70": "*",
+        "symfony/polyfill-php56": "*"
+    },
+    "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ]
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
     "extra": {
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
