--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/process": "4.3.*",
         "symfony/yaml": "4.3.*",
         "twig/extensions": "1.5.*",
         "rapsys/packbundle": "dev-master"
@@ -69,9 +70,10 @@
                     }
                 },
                 "require": {
+                    "symfony/asset": "^4.3",
                     "symfony/config": "^4.3",
                     "symfony/dependency-injection": "^4.3",
-                    "symfony/asset": "^4.3",
+                    "symfony/process": "^4.3",
                     "twig/extensions": "^1.5"
                 }
             }
