Add requires and requires-dev for rapsysuser bundle

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/process": "4.3.*",
         "symfony/yaml": "4.3.*",
         "twig/extensions": "1.5.*",
-        "rapsys/packbundle": "dev-master"
+        "rapsys/packbundle": "dev-master",
+        "rapsys/userbundle": "dev-master"
     },
     "require-dev": {
     },
@@ -51,6 +52,19 @@
                     "psr-4": {
                         "Rapsys\\UserBundle\\": ""
                     }
+                },
+                "require": {
+                    "php": "*",
+                    "doctrine/common": "*",
+                    "symfony/config": "*",
+                    "symfony/dependency-injection": "*",
+                    "symfony/form": "*",
+                    "symfony/framework-bundle": "*",
+                    "symfony/routing": "*",
+                    "symfony/security": "*"
+                },
+                "require-dev": {
+                    "doctrine/data-fixtures": "*"
                 }
             }
         },
