--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/process": "4.3.*",
+        "symfony/security-bundle": "4.3.*",
         "symfony/yaml": "4.3.*",
         "twig/extensions": "1.5.*",
         "rapsys/packbundle": "dev-master",
@@ -62,7 +63,7 @@
                     "symfony/form": "*",
                     "symfony/framework-bundle": "*",
                     "symfony/routing": "*",
-                    "symfony/security": "*"
+                    "symfony/security-bundle": "*"
                 },
                 "require-dev": {
                     "doctrine/data-fixtures": "*"
@@ -116,7 +117,7 @@
                     "symfony/form": "*",
                     "symfony/framework-bundle": "*",
                     "symfony/routing": "*",
-                    "symfony/security": "*",
+                    "symfony/security-bundle": "*",
                     "symfony/translation": "*",
                     "symfony/twig-bundle": "*",
                     "doctrine/data-fixtures": "*",
