--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
                     }
                 },
                 "require": {
-                    "doctrine/doctrine-bundle": "^4.3",
+                    "doctrine/doctrine-bundle": "^1.11",
                     "symfony/form": "^4.3",
                     "symfony/framework-bundle": "^4.3",
                     "symfony/security-bundle": "^4.3",
@@ -104,18 +104,20 @@
                     }
                 },
                 "require": {
-                    "doctrine/doctrine-bundle": "^4.3",
+                    "doctrine/orm": "^2.6",
+                    "doctrine/doctrine-bundle": "^1.11",
                     "symfony/form": "^4.3",
                     "symfony/framework-bundle": "^4.3",
                     "symfony/security-bundle": "^4.3",
                     "symfony/translation": "^4.3",
                     "symfony/twig-bundle": "^4.3",
                     "symfony/validator": "^4.3",
-                    "swiftmailer/swiftmailer-bundle": "^3.3",
+                    "symfony/swiftmailer-bundle": "^3.3",
                     "twig/extensions": "^1.5"
                 },
                 "require-dev": {
-                    "doctrine/doctrine-fixtures-bundle": "^3.2"
+                    "doctrine/doctrine-fixtures-bundle": "^3.2",
+                    "symfony/web-profiler-bundle": "^4.3"
                 }
             }
         }
