--- a/composer.json
+++ b/composer.json
@@ -104,19 +104,21 @@
                     }
                 },
                 "require": {
-                    "doctrine/orm": "^2.6",
                     "doctrine/doctrine-bundle": "^1.11",
+                    "doctrine/doctrine-fixtures-bundle": "^3.2",
+                    "doctrine/orm": "^2.6",
                     "symfony/form": "^4.3",
                     "symfony/framework-bundle": "^4.3",
+                    "symfony/mailer": "^4.3",
+                    "symfony/profiler-pack": "^1.0",
                     "symfony/security-bundle": "^4.3",
                     "symfony/translation": "^4.3",
                     "symfony/twig-bundle": "^4.3",
                     "symfony/validator": "^4.3",
-                    "symfony/swiftmailer-bundle": "^3.3",
-                    "twig/extensions": "^1.5"
+                    "twig/extensions": "^1.5",
+                    "twig/html-extra": "^2.12"
                 },
                 "require-dev": {
-                    "doctrine/doctrine-fixtures-bundle": "^3.2",
                     "doctrine/doctrine-migrations-bundle": "^2.0",
                     "symfony/maker-bundle": "^1.14",
                     "symfony/web-profiler-bundle": "^4.3"
