--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "rapsys/airbundle": "dev-master",
+        "rapsys/packbundle": "dev-master",
+        "rapsys/userbundle": "dev-master",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dependency-injection": "4.3.*",
@@ -16,10 +19,7 @@
         "symfony/process": "4.3.*",
         "symfony/security-bundle": "4.3.*",
         "symfony/yaml": "4.3.*",
-        "twig/extensions": "1.5.*",
-        "rapsys/packbundle": "dev-master",
-        "rapsys/userbundle": "dev-master",
-        "rapsys/airbundle": "dev-master"
+        "twig/extensions": "1.5.*"
     },
     "require-dev": {
     },
@@ -105,7 +105,6 @@
                 },
                 "require": {
                     "doctrine/doctrine-bundle": "^1.11",
-                    "doctrine/doctrine-fixtures-bundle": "^3.2",
                     "doctrine/orm": "^2.6",
                     "symfony/form": "^4.3",
                     "symfony/framework-bundle": "^4.3",
@@ -119,8 +118,11 @@
                     "twig/html-extra": "^2.12"
                 },
                 "require-dev": {
+                    "doctrine/doctrine-fixtures-bundle": "^3.2",
                     "doctrine/doctrine-migrations-bundle": "^2.0",
+                    "symfony/browser-kit": "4.3.*",
                     "symfony/maker-bundle": "^1.14",
+                    "symfony/phpunit-bridge": "^4.3",
                     "symfony/web-profiler-bundle": "^4.3"
                 }
             }
