--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
                 },
                 "require": {
                     "doctrine/doctrine-bundle": "^1.11",
+                    "symfony/flex": "^1.3.1",
                     "symfony/form": "^4.3",
                     "symfony/framework-bundle": "^4.3",
                     "symfony/security-bundle": "^4.3",
@@ -80,10 +81,11 @@
                     }
                 },
                 "require": {
-                    "symfony/framework-bundle": "^4.3",
-                    "symfony/twig-bundle": "^4.3",
                     "symfony/asset": "^4.3",
+                    "symfony/flex": "^1.3.1",
+                    "symfony/framework-bundle": "^4.3",
                     "symfony/process": "^4.3",
+                    "symfony/twig-bundle": "^4.3",
                     "twig/extensions": "^1.5"
                 }
             }
@@ -106,6 +108,7 @@
                 "require": {
                     "doctrine/doctrine-bundle": "^1.11",
                     "doctrine/orm": "^2.6",
+                    "symfony/flex": "^1.3.1",
                     "symfony/form": "^4.3",
                     "symfony/framework-bundle": "^4.3",
                     "symfony/mailer": "^4.3",
