--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,11 @@
         "twig/extensions": "1.5.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "symfony/browser-kit": "4.3.*",
+        "symfony/maker-bundle": "^1.14",
+        "symfony/phpunit-bridge": "^4.3",
+        "symfony/web-profiler-bundle": "^4.3"
     },
     "config": {
         "preferred-install": {
