--- a/composer.json
+++ b/composer.json
@@ -10,23 +10,23 @@
         "rapsys/airbundle": "dev-master",
         "rapsys/packbundle": "dev-master",
         "rapsys/userbundle": "dev-master",
-        "symfony/asset": "4.3.*",
-        "symfony/console": "4.3.*",
-        "symfony/dependency-injection": "4.3.*",
-        "symfony/dotenv": "4.3.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "4.3.*",
-        "symfony/process": "4.3.*",
-        "symfony/security-bundle": "4.3.*",
-        "symfony/yaml": "4.3.*",
-        "twig/extensions": "1.5.*"
+        "symfony/asset": "^4.4",
+        "symfony/console": "^4.4",
+        "symfony/dependency-injection": "^4.4",
+        "symfony/dotenv": "^4.4",
+        "symfony/flex": "^1.5",
+        "symfony/framework-bundle": "^4.4",
+        "symfony/process": "^4.4",
+        "symfony/security-bundle": "^4.4",
+        "symfony/yaml": "^4.4",
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.2",
-        "symfony/browser-kit": "4.3.*",
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "symfony/browser-kit": "^4.4",
         "symfony/maker-bundle": "^1.14",
-        "symfony/phpunit-bridge": "^4.3",
-        "symfony/web-profiler-bundle": "^4.3"
+        "symfony/phpunit-bridge": "^4.4",
+        "symfony/web-profiler-bundle": "^4.4"
     },
     "config": {
         "preferred-install": {
@@ -61,12 +61,12 @@
                     }
                 },
                 "require": {
-                    "doctrine/doctrine-bundle": "^1.11",
-                    "symfony/flex": "^1.3.1",
-                    "symfony/form": "^4.3",
-                    "symfony/framework-bundle": "^4.3",
-                    "symfony/security-bundle": "^4.3",
-                    "symfony/validator": "^4.3"
+                    "doctrine/doctrine-bundle": "^1.12",
+                    "symfony/flex": "^1.5",
+                    "symfony/form": "^4.4",
+                    "symfony/framework-bundle": "^4.4",
+                    "symfony/security-bundle": "^4.4",
+                    "symfony/validator": "^4.4"
                 }
             }
         },
@@ -86,11 +86,11 @@
                     }
                 },
                 "require": {
-                    "symfony/asset": "^4.3",
-                    "symfony/flex": "^1.3.1",
-                    "symfony/framework-bundle": "^4.3",
-                    "symfony/process": "^4.3",
-                    "symfony/twig-bundle": "^4.3",
+                    "symfony/asset": "^4.4",
+                    "symfony/flex": "^1.5",
+                    "symfony/framework-bundle": "^4.4",
+                    "symfony/process": "^4.4",
+                    "symfony/twig-bundle": "^4.4",
                     "twig/extensions": "^1.5"
                 }
             }
@@ -111,26 +111,26 @@
                     }
                 },
                 "require": {
-                    "doctrine/doctrine-bundle": "^1.11",
-                    "doctrine/orm": "^2.6",
-                    "symfony/flex": "^1.3.1",
-                    "symfony/form": "^4.3",
-                    "symfony/framework-bundle": "^4.3",
-                    "symfony/mailer": "^4.3",
+                    "doctrine/doctrine-bundle": "^1.12",
+                    "doctrine/orm": "^2.7",
+                    "symfony/flex": "^1.5",
+                    "symfony/form": "^4.4",
+                    "symfony/framework-bundle": "^4.4",
+                    "symfony/mailer": "^4.4",
                     "symfony/profiler-pack": "^1.0",
-                    "symfony/security-bundle": "^4.3",
-                    "symfony/translation": "^4.3",
-                    "symfony/twig-bundle": "^4.3",
-                    "symfony/validator": "^4.3",
+                    "symfony/security-bundle": "^4.4",
+                    "symfony/translation": "^4.4",
+                    "symfony/twig-bundle": "^4.4",
+                    "symfony/validator": "^4.4",
                     "twig/extensions": "^1.5",
                     "twig/html-extra": "^2.12"
                 },
                 "require-dev": {
-                    "doctrine/doctrine-fixtures-bundle": "^3.2",
-                    "symfony/browser-kit": "4.3.*",
+                    "doctrine/doctrine-fixtures-bundle": "^3.3",
+                    "symfony/browser-kit": "^4.3",
                     "symfony/maker-bundle": "^1.14",
-                    "symfony/phpunit-bridge": "^4.3",
-                    "symfony/web-profiler-bundle": "^4.3"
+                    "symfony/phpunit-bridge": "^4.4",
+                    "symfony/web-profiler-bundle": "^4.4"
                 }
             }
         }
