--- a/composer.json
+++ b/composer.json
@@ -13,26 +13,26 @@
         "symfony/asset": "^4.4",
         "symfony/console": "^4.4",
         "symfony/dependency-injection": "^4.4",
+        "symfony/dom-crawler": "^4.4",
         "symfony/dotenv": "^4.4",
+        "symfony/filesystem": "^4.4",
+        "symfony/finder": "^4.4",
         "symfony/flex": "^1.5",
         "symfony/framework-bundle": "^4.4",
-        "symfony/process": "^4.4",
-        "symfony/security-bundle": "^4.4",
-        "symfony/yaml": "^4.4",
-        "twig/extensions": "^1.5",
-        "symfony/finder": "^4.4",
-        "symfony/filesystem": "^4.4",
         "symfony/http-foundation": "^4.4",
-        "symfony/var-dumper": "^4.4",
-        "symfony/var-exporter": "^4.4",
         "symfony/inflector": "^4.4",
-        "symfony/property-access": "^4.4",
-        "symfony/options-resolver": "^4.4",
         "symfony/intl": "^4.4",
+        "symfony/mime": "^4.4",
+        "symfony/options-resolver": "^4.4",
+        "symfony/process": "^4.4",
+        "symfony/property-access": "^4.4",
+        "symfony/security-bundle": "^4.4",
         "symfony/security-csrf": "^4.4",
         "symfony/stopwatch": "^4.4",
-        "symfony/dom-crawler": "^4.4",
-        "symfony/mime": "^4.4"
+        "symfony/var-dumper": "^4.4",
+        "symfony/var-exporter": "^4.4",
+        "symfony/yaml": "^4.4",
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
