--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "erusev/parsedown": "^1.7",
         "rapsys/airbundle": "dev-master",
         "rapsys/packbundle": "dev-master",
         "rapsys/userbundle": "dev-master",
@@ -32,7 +33,9 @@
         "symfony/var-dumper": "^4.4",
         "symfony/var-exporter": "^4.4",
         "symfony/yaml": "^4.4",
-        "twig/extensions": "^1.5"
+        "twig/extensions": "^1.5",
+        "twig/extra-bundle": "^3.1",
+        "twig/markdown-extra": "^3.1"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
