--- a/composer.json
+++ b/composer.json
@@ -4,45 +4,44 @@
     "description": "Outdoor area booking system",
     "license": "AGPL-3.0-or-later",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.0|^8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "erusev/parsedown": "^1.7",
         "rapsys/airbundle": "dev-master",
         "rapsys/packbundle": "dev-master",
         "rapsys/userbundle": "dev-master",
-        "symfony/asset": "^4.4",
-        "symfony/console": "^4.4",
-        "symfony/dependency-injection": "^4.4",
-        "symfony/dom-crawler": "^4.4",
-        "symfony/dotenv": "^4.4",
-        "symfony/filesystem": "^4.4",
-        "symfony/finder": "^4.4",
-        "symfony/flex": "^1.5",
-        "symfony/framework-bundle": "^4.4",
-        "symfony/http-foundation": "^4.4",
-        "symfony/inflector": "^4.4",
-        "symfony/intl": "^4.4",
-        "symfony/mime": "^4.4",
-        "symfony/options-resolver": "^4.4",
-        "symfony/process": "^4.4",
-        "symfony/property-access": "^4.4",
-        "symfony/security-bundle": "^4.4",
-        "symfony/security-csrf": "^4.4",
-        "symfony/stopwatch": "^4.4",
-        "symfony/var-dumper": "^4.4",
-        "symfony/var-exporter": "^4.4",
-        "symfony/yaml": "^4.4",
-        "twig/extensions": "^1.5",
-        "twig/extra-bundle": "^3.1",
-        "twig/markdown-extra": "^3.1"
+        "symfony/asset": "^4.0|^5.0",
+        "symfony/console": "^4.0|^5.0",
+        "symfony/dependency-injection": "^4.0|^5.0",
+        "symfony/dom-crawler": "^4.0|^5.0",
+        "symfony/dotenv": "^4.0|^5.0",
+        "symfony/filesystem": "^4.0|^5.0",
+        "symfony/finder": "^4.0|^5.0",
+        "symfony/flex": "^1.0",
+        "symfony/framework-bundle": "^4.0|^5.0",
+        "symfony/http-foundation": "^4.0|^5.0",
+        "symfony/string": "^4.0|^5.0",
+        "symfony/intl": "^4.0|^5.0",
+        "symfony/mime": "^4.0|^5.0",
+        "symfony/options-resolver": "^4.0|^5.0",
+        "symfony/process": "^4.0|^5.0",
+        "symfony/property-access": "^4.0|^5.0",
+        "symfony/security-bundle": "^4.0|^5.0",
+        "symfony/security-csrf": "^4.0|^5.0",
+        "symfony/stopwatch": "^4.0|^5.0",
+        "symfony/var-dumper": "^4.0|^5.0",
+        "symfony/var-exporter": "^4.0|^5.0",
+        "symfony/yaml": "^4.0|^5.0",
+        "twig/extra-bundle": "^3.0",
+        "twig/markdown-extra": "^3.0"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "symfony/browser-kit": "^4.4",
-        "symfony/maker-bundle": "^1.14",
-        "symfony/phpunit-bridge": "^4.4",
-        "symfony/web-profiler-bundle": "^4.4"
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "symfony/browser-kit": "^4.0|^5.0",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^4.0|^5.0",
+        "symfony/web-profiler-bundle": "^4.0|^5.0"
     },
     "config": {
         "preferred-install": {
@@ -77,12 +76,11 @@
                     }
                 },
                 "require": {
-                    "symfony/asset": "^4.4",
-                    "symfony/flex": "^1.5",
-                    "symfony/framework-bundle": "^4.4",
-                    "symfony/process": "^4.4",
-                    "symfony/twig-bundle": "^4.4",
-                    "twig/extensions": "^1.5"
+                    "symfony/asset": "^4.0|^5.0",
+                    "symfony/flex": "^1.0",
+                    "symfony/framework-bundle": "^4.0|^5.0",
+                    "symfony/process": "^4.0|^5.0",
+                    "symfony/twig-bundle": "^4.0|^5.0"
                 }
             }
         },
@@ -102,13 +100,16 @@
                     }
                 },
                 "require": {
-                    "doctrine/doctrine-bundle": "^1.12",
+                    "doctrine/doctrine-bundle": "^1.0|^2.0",
                     "rapsys/packbundle": "dev-master",
-                    "symfony/flex": "^1.5",
-                    "symfony/form": "^4.4",
-                    "symfony/framework-bundle": "^4.4",
-                    "symfony/security-bundle": "^4.4",
-                    "symfony/validator": "^4.4"
+                    "symfony/flex": "^1.0",
+                    "symfony/form": "^4.0|^5.0",
+                    "symfony/framework-bundle": "^4.0|^5.0",
+                    "symfony/security-bundle": "^4.0|^5.0",
+                    "symfony/validator": "^4.0|^5.0"
+                },
+                "require-dev": {
+                    "doctrine/doctrine-fixtures-bundle": "^3.0"
                 }
             }
         },
@@ -128,30 +129,30 @@
                     }
                 },
                 "require": {
-                    "doctrine/doctrine-bundle": "^1.12",
-                    "doctrine/orm": "^2.7",
-                    "rapsys/userbundle": "dev-master",
-                    "rapsys/packbundle": "dev-master",
-                    "fpdf/fpdf": "^1.83.1",
+                    "doctrine/doctrine-bundle": "^1.0|^2.0",
+                    "doctrine/orm": "^2.0",
+                    "erusev/parsedown": "^1.7",
+                    "fpdf/fpdf": "^1.83",
                     "google/apiclient": "^2.9",
-                    "symfony/flex": "^1.5",
-                    "symfony/form": "^4.4",
-                    "symfony/framework-bundle": "^4.4",
-                    "symfony/mailer": "^4.4",
+                    "rapsys/packbundle": "dev-master",
+                    "rapsys/userbundle": "dev-master",
+                    "symfony/flex": "^1.0",
+                    "symfony/form": "^4.0|^5.0",
+                    "symfony/framework-bundle": "^4.0|^5.0",
+                    "symfony/mailer": "^4.0|^5.0",
                     "symfony/profiler-pack": "^1.0",
-                    "symfony/security-bundle": "^4.4",
-                    "symfony/translation": "^4.4",
-                    "symfony/twig-bundle": "^4.4",
-                    "symfony/validator": "^4.4",
-                    "twig/extensions": "^1.5",
-                    "twig/html-extra": "^2.12"
+                    "symfony/security-bundle": "^4.0|^5.0",
+                    "symfony/translation": "^4.0|^5.0",
+                    "symfony/twig-bundle": "^4.0|^5.0",
+                    "symfony/validator": "^4.0|^5.0",
+                    "twig/html-extra": "^2.0|^3.0"
                 },
                 "require-dev": {
-                    "doctrine/doctrine-fixtures-bundle": "^3.3",
-                    "symfony/browser-kit": "^4.3",
-                    "symfony/maker-bundle": "^1.14",
-                    "symfony/phpunit-bridge": "^4.4",
-                    "symfony/web-profiler-bundle": "^4.4"
+                    "doctrine/doctrine-fixtures-bundle": "^3.0",
+                    "symfony/browser-kit": "^4.0|^5.0",
+                    "symfony/maker-bundle": "^1.0",
+                    "symfony/phpunit-bridge": "^4.0|^5.0",
+                    "symfony/web-profiler-bundle": "^4.0|^5.0"
                 }
             }
         }
