--- a/composer.json
+++ b/composer.json
@@ -7,29 +7,41 @@
         "php": "^7.0|^8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^2.6",
+        "doctrine/persistence": "^2.2",
         "erusev/parsedown": "^1.7",
         "rapsys/airbundle": "dev-master",
         "rapsys/packbundle": "dev-master",
         "rapsys/userbundle": "dev-master",
         "symfony/asset": "^4.0|^5.0",
+        "symfony/cache": "^4.0|^5.0",
+        "symfony/config": "^4.0|^5.0",
         "symfony/console": "^4.0|^5.0",
         "symfony/dependency-injection": "^4.0|^5.0",
         "symfony/dom-crawler": "^4.0|^5.0",
         "symfony/dotenv": "^4.0|^5.0",
+        "symfony/error-handler": "^4.0|^5.0",
+        "symfony/event-dispatcher": "^4.0|^5.0",
         "symfony/filesystem": "^4.0|^5.0",
         "symfony/finder": "^4.0|^5.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0|^5.0",
         "symfony/http-foundation": "^4.0|^5.0",
-        "symfony/string": "^4.0|^5.0",
+        "symfony/http-kernel": "^4.0|^5.0",
         "symfony/intl": "^4.0|^5.0",
         "symfony/mime": "^4.0|^5.0",
         "symfony/options-resolver": "^4.0|^5.0",
+        "symfony/password-hasher": "^4.0|^5.0",
         "symfony/process": "^4.0|^5.0",
         "symfony/property-access": "^4.0|^5.0",
+        "symfony/property-info": "^4.0|^5.0",
+        "symfony/routing": "^4.0|^5.0",
+        "symfony/runtime": "^4.0|^5.0",
         "symfony/security-bundle": "^4.0|^5.0",
         "symfony/security-csrf": "^4.0|^5.0",
         "symfony/stopwatch": "^4.0|^5.0",
+        "symfony/string": "^4.0|^5.0",
+        "symfony/twig-bridge": "^4.0|^5.0",
         "symfony/var-dumper": "^4.0|^5.0",
         "symfony/var-exporter": "^4.0|^5.0",
         "symfony/yaml": "^4.0|^5.0",
@@ -100,7 +112,7 @@
                     }
                 },
                 "require": {
-                    "doctrine/doctrine-bundle": "^1.0|^2.0",
+                    "doctrine/doctrine-bundle": "^1.0|^2.6",
                     "rapsys/packbundle": "dev-master",
                     "symfony/flex": "^1.0",
                     "symfony/form": "^4.0|^5.0",
@@ -129,7 +141,7 @@
                     }
                 },
                 "require": {
-                    "doctrine/doctrine-bundle": "^1.0|^2.0",
+                    "doctrine/doctrine-bundle": "^1.0|^2.6",
                     "doctrine/orm": "^2.0",
                     "erusev/parsedown": "^1.7",
                     "fpdf/fpdf": "^1.83",
