Add rapsysair bundle default env variables

--- a/.env
+++ b/.env
@@ -38,3 +38,9 @@ GOOGLE_API_KEY="Ch4ng3m3!"
 GOOGLE_CLIENT_ID="Ch4ng3m3!"
 GOOGLE_CLIENT_SECRET="Ch4ng3m3!"
 ###< google/apiclient ###
+
+###> rapsys/airbundle ###
+RAPSYSAIR_CALENDAR="Ch4ng3m3!"
+RAPSYSAIR_PREFIX="Ch4ng3m3!"
+RAPSYSAIR_PROJECT="Ch4ng3m3!"
+###< rapsys/airbundle ###
