Remove useless env variables

--- a/.env
+++ b/.env
@@ -33,14 +33,8 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&ch
 MAILER_DSN="sendmail+smtp://default"
 ###< symfony/mailer ###
 
-###> google/apiclient ###
-GOOGLE_API_KEY="Ch4ng3m3!"
-GOOGLE_CLIENT_ID="Ch4ng3m3!"
-GOOGLE_CLIENT_SECRET="Ch4ng3m3!"
-###< google/apiclient ###
-
 ###> rapsys/airbundle ###
-RAPSYSAIR_CALENDAR="Ch4ng3m3!"
-RAPSYSAIR_PREFIX="Ch4ng3m3!"
-RAPSYSAIR_PROJECT="Ch4ng3m3!"
+GOOGLE_CLIENT="Ch4ng3m3!"
+GOOGLE_PROJECT="Ch4ng3m3!"
+GOOGLE_SECRET="Ch4ng3m3!"
 ###< rapsys/airbundle ###
