Add Emain and Profile google api client services

--- a/composer.json
+++ b/composer.json
@@ -202,7 +202,9 @@
             "keep-outdated": true
         },
         "google/apiclient-services": [
-            "Calendar"
+            "Calendar",
+            "Email",
+            "Profile"
         ],
         "symfony": {
             "allow-contrib": true,
