--- a/composer.json
+++ b/composer.json
@@ -4,66 +4,64 @@
     "description": "Outdoor area booking system",
     "license": "AGPL-3.0-or-later",
     "require": {
-        "php": "^7.0|^8.0",
+        "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/doctrine-bundle": "^2.6",
-        "doctrine/persistence": "^2.2",
-        "erusev/parsedown": "^1.7",
+        "doctrine/annotations": "^1.0|^2.0",
+        "doctrine/doctrine-bundle": "^2.0",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.0",
+        "erusev/parsedown": "^1.0|^2.0",
         "rapsys/airbundle": "dev-master",
         "rapsys/packbundle": "dev-master",
         "rapsys/userbundle": "dev-master",
-        "symfony/asset": "^4.0|^5.0",
-        "symfony/cache": "^4.0|^5.0",
-        "symfony/config": "^4.0|^5.0",
-        "symfony/console": "^4.0|^5.0",
-        "symfony/dependency-injection": "^4.0|^5.0",
-        "symfony/dom-crawler": "^4.0|^5.0",
-        "symfony/dotenv": "^4.0|^5.0",
-        "symfony/error-handler": "^4.0|^5.0",
-        "symfony/event-dispatcher": "^4.0|^5.0",
-        "symfony/filesystem": "^4.0|^5.0",
-        "symfony/finder": "^4.0|^5.0",
-        "symfony/flex": "^1.0",
-        "symfony/framework-bundle": "^4.0|^5.0",
-        "symfony/http-foundation": "^4.0|^5.0",
-        "symfony/http-kernel": "^4.0|^5.0",
-        "symfony/intl": "^4.0|^5.0",
-        "symfony/mime": "^4.0|^5.0",
-        "symfony/options-resolver": "^4.0|^5.0",
-        "symfony/password-hasher": "^4.0|^5.0",
-        "symfony/process": "^4.0|^5.0",
-        "symfony/property-access": "^4.0|^5.0",
-        "symfony/property-info": "^4.0|^5.0",
-        "symfony/routing": "^4.0|^5.0",
-        "symfony/runtime": "^4.0|^5.0",
-        "symfony/security-bundle": "^4.0|^5.0",
-        "symfony/security-csrf": "^4.0|^5.0",
-        "symfony/stopwatch": "^4.0|^5.0",
-        "symfony/string": "^4.0|^5.0",
-        "symfony/twig-bridge": "^4.0|^5.0",
-        "symfony/var-dumper": "^4.0|^5.0",
-        "symfony/var-exporter": "^4.0|^5.0",
-        "symfony/yaml": "^4.0|^5.0",
+        "symfony/asset": "^7.0",
+        "symfony/console": "^7.0",
+        "symfony/doctrine-messenger": "^7.0",
+        "symfony/dotenv": "^7.0",
+        "symfony/expression-language": "^7.0",
+        "symfony/flex": "^2.0",
+        "symfony/form": "^7.0",
+        "symfony/framework-bundle": "^7.0",
+        "symfony/http-client": "^7.0",
+        "symfony/intl": "^7.0",
+        "symfony/mailer": "^7.0",
+        "symfony/mime": "^7.0",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/notifier": "^7.0",
+        "symfony/process": "^7.0",
+        "symfony/property-access": "^7.0",
+        "symfony/property-info": "^7.0",
+        "symfony/runtime": "^7.0",
+        "symfony/security-bundle": "^7.0",
+        "symfony/serializer": "^7.0",
+        "symfony/string": "^7.0",
+        "symfony/translation": "^7.0",
+        "symfony/twig-bundle": "^7.0",
+        "symfony/validator": "^7.0",
+        "symfony/web-link": "^7.0",
+        "symfony/yaml": "^7.0",
         "twig/extra-bundle": "^3.0",
-        "twig/markdown-extra": "^3.0"
+        "twig/markdown-extra": "^3.0",
+        "twig/twig": "^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "symfony/browser-kit": "^4.0|^5.0",
+        "phpunit/phpunit": "^10.0",
+        "symfony/browser-kit": "^7.0",
+        "symfony/css-selector": "^7.0",
+        "symfony/debug-bundle": "^7.0",
         "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^4.0|^5.0",
-        "symfony/web-profiler-bundle": "^4.0|^5.0"
+        "symfony/phpunit-bridge": "^7.0",
+        "symfony/stopwatch": "^7.0",
+        "symfony/web-profiler-bundle": "^7.0"
     },
     "config": {
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true,
         "allow-plugins": {
             "symfony/flex": true,
             "symfony/runtime": true
-        }
+        },
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
@@ -92,11 +90,11 @@
                     }
                 },
                 "require": {
-                    "symfony/asset": "^4.0|^5.0",
-                    "symfony/flex": "^1.0",
-                    "symfony/framework-bundle": "^4.0|^5.0",
-                    "symfony/process": "^4.0|^5.0",
-                    "symfony/twig-bundle": "^4.0|^5.0"
+                    "symfony/asset": "^7.0",
+                    "symfony/flex": "^2.0",
+                    "symfony/framework-bundle": "^7.0",
+                    "symfony/process": "^7.0",
+                    "symfony/twig-bundle": "^5.0"
                 }
             }
         },
@@ -116,13 +114,13 @@
                     }
                 },
                 "require": {
-                    "doctrine/doctrine-bundle": "^1.0|^2.6",
+                    "doctrine/doctrine-bundle": "^2.0",
                     "rapsys/packbundle": "dev-master",
-                    "symfony/flex": "^1.0",
-                    "symfony/form": "^4.0|^5.0",
-                    "symfony/framework-bundle": "^4.0|^5.0",
-                    "symfony/security-bundle": "^4.0|^5.0",
-                    "symfony/validator": "^4.0|^5.0"
+                    "symfony/flex": "^2.0",
+                    "symfony/form": "^7.0",
+                    "symfony/framework-bundle": "^7.0",
+                    "symfony/security-bundle": "^7.0",
+                    "symfony/validator": "^7.0"
                 },
                 "require-dev": {
                     "doctrine/doctrine-fixtures-bundle": "^3.0"
@@ -145,30 +143,31 @@
                     }
                 },
                 "require": {
-                    "doctrine/doctrine-bundle": "^1.0|^2.6",
+                    "doctrine/doctrine-bundle": "^2.0",
                     "doctrine/orm": "^2.0",
-                    "erusev/parsedown": "^1.7",
-                    "fpdf/fpdf": "^1.83",
-                    "google/apiclient": "^2.9",
+                    "erusev/parsedown": "^1.0|^2.0",
+                    "fpdf/fpdf": "^1.0",
+                    "google/apiclient": "^2.0",
                     "rapsys/packbundle": "dev-master",
                     "rapsys/userbundle": "dev-master",
-                    "symfony/flex": "^1.0",
-                    "symfony/form": "^4.0|^5.0",
-                    "symfony/framework-bundle": "^4.0|^5.0",
-                    "symfony/mailer": "^4.0|^5.0",
+                    "symfony/flex": "^2.0",
+                    "symfony/form": "^7.0",
+                    "symfony/framework-bundle": "^7.0",
+                    "symfony/mailer": "^7.0",
                     "symfony/profiler-pack": "^1.0",
-                    "symfony/security-bundle": "^4.0|^5.0",
-                    "symfony/translation": "^4.0|^5.0",
-                    "symfony/twig-bundle": "^4.0|^5.0",
-                    "symfony/validator": "^4.0|^5.0",
-                    "twig/html-extra": "^2.0|^3.0"
+                    "symfony/security-bundle": "^7.0",
+                    "symfony/translation": "^7.0",
+                    "symfony/twig-bundle": "^7.0",
+                    "symfony/validator": "^7.0",
+                    "twig/html-extra": "^3.0",
+                    "twig/intl-extra": "^3.0"
                 },
                 "require-dev": {
                     "doctrine/doctrine-fixtures-bundle": "^3.0",
-                    "symfony/browser-kit": "^4.0|^5.0",
+                    "symfony/browser-kit": "^7.0",
                     "symfony/maker-bundle": "^1.0",
-                    "symfony/phpunit-bridge": "^4.0|^5.0",
-                    "symfony/web-profiler-bundle": "^4.0|^5.0"
+                    "symfony/phpunit-bridge": "^7.0",
+                    "symfony/web-profiler-bundle": "^7.0"
                 }
             }
         }
@@ -207,7 +206,8 @@
         ],
         "symfony": {
             "allow-contrib": true,
-            "endpoint": "https://flex.rapsys.eu"
+            "require": "^7.0",
+            "docker": false
         },
         "symfony-assets-install": "relative"
     }
