Add symfony messenger block

--- a/.env
+++ b/.env
@@ -38,3 +38,10 @@ GOOGLE_CLIENT="Ch4ng3m3!"
 GOOGLE_PROJECT="Ch4ng3m3!"
 GOOGLE_SECRET="Ch4ng3m3!"
 ###< rapsys/airbundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
