Double quote strings Add pack bundle env variables

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV="dev"
 APP_SECRET="Ch4ng3m3!"
 ###< symfony/framework-bundle ###
 
@@ -30,7 +30,7 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&ch
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+# MAILER_DSN="null://null"
 ###< symfony/mailer ###
 
 ###> rapsys/airbundle ###
@@ -41,9 +41,9 @@ GOOGLE_SECRET="Ch4ng3m3!"
 
 ###> symfony/messenger ###
 # Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+# MESSENGER_TRANSPORT_DSN="amqp://guest:guest@localhost:5672/%2f/messages"
+# MESSENGER_TRANSPORT_DSN="redis://localhost:6379/messages"
+MESSENGER_TRANSPORT_DSN="doctrine://default?auto_setup=0"
 ###< symfony/messenger ###
 
 ###> google/apiclient ###
@@ -52,3 +52,19 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_AUTH_CONFIG=%kernel.project_dir%/path/to/file.json
 ###< google/apiclient ###
+
+###> rapsys/packbundle ###
+# User agent
+RAPSYSPACK_AGENT='rapsyspack/Ch4ng3m3!'
+# Hostname
+RAPSYSPACK_HOSTNAME="Ch4ng3m3!"
+# Shuffled printable character range",
+# XXX: Run "php bin/console rapsyspack:range" to generate a range
+RAPSYSPACK_RANGE="Ch4ng3m3!"
+# Redirect
+RAPSYSPACK_REDIRECT=20
+# Scheme
+RAPSYSPACK_SCHEME="https://"
+# Timeout
+RAPSYSPACK_TIMEOUT=60
+###< rapsys/packbundle ###
