Fix pack bundle scheme env variable Drop pack bundle hostname env variable Add RAPSYSAIR_GOOGLE_CLIENT, RAPSYSAIR_GOOGLE_PROJECT, RAPSYSAIR_GOOGLE_SECRET, RAPSYSAIR_HOSTNAME and RAPSYSPACK_SCHEME env variables Cleanup

--- a/.env
+++ b/.env
@@ -33,12 +33,6 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&ch
 # MAILER_DSN="null://null"
 ###< symfony/mailer ###
 
-###> rapsys/airbundle ###
-GOOGLE_CLIENT="Ch4ng3m3!"
-GOOGLE_PROJECT="Ch4ng3m3!"
-GOOGLE_SECRET="Ch4ng3m3!"
-###< rapsys/airbundle ###
-
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN="amqp://guest:guest@localhost:5672/%2f/messages"
@@ -46,25 +40,29 @@ GOOGLE_SECRET="Ch4ng3m3!"
 MESSENGER_TRANSPORT_DSN="doctrine://default?auto_setup=0"
 ###< symfony/messenger ###
 
-###> google/apiclient ###
-GOOGLE_API_KEY=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_AUTH_CONFIG=%kernel.project_dir%/path/to/file.json
-###< google/apiclient ###
+###> rapsys/airbundle ###
+# Google client
+RAPSYSAIR_GOOGLE_CLIENT="Ch4ng3m3!"
+# Google project
+RAPSYSAIR_GOOGLE_PROJECT="Ch4ng3m3!"
+# Google secret
+RAPSYSAIR_GOOGLE_SECRET="Ch4ng3m3!"
+# Hostname
+RAPSYSAIR_HOSTNAME="Ch4ng3m3!"
+# Scheme
+RAPSYSAIR_SCHEME="https"
+###< rapsys/airbundle ###
 
 ###> rapsys/packbundle ###
 # User agent
 RAPSYSPACK_AGENT='rapsyspack/Ch4ng3m3!'
-# Hostname
-RAPSYSPACK_HOSTNAME="Ch4ng3m3!"
 # Shuffled printable character range",
 # XXX: Run "php bin/console rapsyspack:range" to generate a range
 RAPSYSPACK_RANGE="Ch4ng3m3!"
 # Redirect
 RAPSYSPACK_REDIRECT=20
 # Scheme
-RAPSYSPACK_SCHEME="https://"
+RAPSYSPACK_SCHEME="https"
 # Timeout
 RAPSYSPACK_TIMEOUT=60
 ###< rapsys/packbundle ###
