Use google apiclient bundle client and secret env variables

--- a/.env
+++ b/.env
@@ -41,12 +41,8 @@ MESSENGER_TRANSPORT_DSN="doctrine://default?auto_setup=0"
 ###< symfony/messenger ###
 
 ###> rapsys/airbundle ###
-# Google client
-RAPSYSAIR_GOOGLE_CLIENT="Ch4ng3m3!"
 # Google project
 RAPSYSAIR_GOOGLE_PROJECT="Ch4ng3m3!"
-# Google secret
-RAPSYSAIR_GOOGLE_SECRET="Ch4ng3m3!"
 # Hostname
 RAPSYSAIR_HOSTNAME="Ch4ng3m3!"
 # Scheme
@@ -66,3 +62,10 @@ RAPSYSPACK_SCHEME="https"
 # Timeout
 RAPSYSPACK_TIMEOUT=60
 ###< rapsys/packbundle ###
+
+###> google/apiclient ###
+GOOGLE_API_KEY=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_AUTH_CONFIG=%kernel.project_dir%/path/to/file.json
+###< google/apiclient ###
